--- a/boiler-temperature-monitor.yaml
+++ b/boiler-temperature-monitor.yaml
@@ -1,23 +1,6 @@
 esphome:
   name: boiler-temperature-monitor
 
-esp32:
-  board: nodemcu-32s
-  framework:
-    type: arduino
-
-# Enable logging
-logger:
-
-# Enable Home Assistant API
-api:
-  password: !secret hass_password 
-
-ota:
-  password: !secret ota_update_password
-
-wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
+>>: !include shared-nodemcu-32.yaml
+>>: !include shared.yaml
 
