Corrected typo in immersion heater name

--- a/immersion-heater-sonoff-pow-r3.yaml
+++ b/immersion-heater-sonoff-pow-r3.yaml
@@ -5,7 +5,7 @@
 # to heat the hot water cylinder.
 
 substitutions:
-  friendly_name: Immersion Heather Switch
+  friendly_name: Immersion Heater Switch
 
 esphome:
   name: immersion-heater
